fix: Fix align-itens in product description div

--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ nav {
   font-size: 1rem;
   gap: 20px;
   margin-bottom: 30px;
-  align-items: center;
 }
 
 .description {
